# dstack-nft-cluster

./: .dockerignore  .gitignore  .gitmodules  DSTACK_P2P_SDK_SPEC.md  Dockerfile  README-running-counter.md  README-two-node-demo.md  README.md  counter.py  debug_signature_verification.py  demo_two_nodes.py  docker-compose-fastapi.yml  docker-compose-node1.yml  docker-compose-node2.yml  docker-compose.yml  dstack_cluster.py  example_usage.py  fastapi_server.py  hello_p2p.py  mainnet.env.example  pyproject.toml  requirements.txt  run_counter.sh  run_hello_p2p.sh  run_local_demo.sh  signature_proof.py  start_two_node_demo.sh  stop_two_node_demo.sh  test_corrected_signature.py  test_demo_setup.py  test_local_two_nodes.py  test_p2p_cluster.sh  testlocal.env  verify_dual_simulator_setup.py
contracts/: foundry.toml
contracts/script/: DeployDstackMembershipNFT.s.sol  DeployDstackMembershipNFTMainnet.s.sol
contracts/src/: DstackMembershipNFT.sol
contracts/test/: DstackMembershipNFT.t.sol
notes/: AGENT_GUIDE.md  FORGE_CAPABILITIES.md  FOUNDRY-ENV-SETUP.md  KMS-SIGNATURE-INVESTIGATION.md  PYTHON-INTERACTION-GUIDE.md  instance-address-confusion.md  summary-2025-01-28.md  summary-2025-08-28-afternoon.md  summary-2025-08-28-morning.md  summary-2025-08-29-earlymorning.md  summary-2025-08-29-morning2.md
scripts/: check_dstack_info.py  test_contract_signature_verification.py  test_instance_derivation.py  test_signature_proof.py  test_signature_proof_contract.py
